# llm-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start.sh  stop.sh  test_backend.py  test_integration.py
backend/: auth.py  config.py  database.py  main.py  models.py  proxy_app.py  proxy_manager.py  requirements.txt  schemas.py  shared_proxy.py  sse_parsers.py  stream_reconstructor.py
backend/routers/: admin_router.py  auth_router.py  config_router.py  ports_router.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/components/: JsonTree.vue  RequestCard.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  theme.js
frontend/src/views/: Admin.vue  ChangePassword.vue  Dashboard.vue  DeletedPorts.vue  JsonTreeViewer.vue  JsonViewer.vue  Login.vue  PortDetail.vue  Register.vue  TreeView.vue
tests/: conftest.py  test_admin.py  test_auth.py  test_ports.py  test_proxy.py  test_stress.py
