[project]
name = "llm-proxy"
version = "1.0.0"
description = "Intercept and record communication between AI agents and LLM APIs"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-or-later" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=43.0.0",
    "pyjwt[crypto]>=2.8.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.2.0",
    "certifi>=2024.0.0",
    "httpx>=0.28.0",
    "starlette>=0.41.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "stress: Stress/load tests that may take longer to run",
]
